<resources>
    <string name="app_name">The Wave</string>
    <string name="user_name">User Name</string>
    <string name="ic_close">Close Icon Animation</string>
    <string name="cross">Cross</string>
    <string name="ic_group_close">Group Tick Close</string>
    <string name="is_student">Are you a student?</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="string_hint">Howard University</string>
    <string name="school_hint">Howard University</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="which_school">What school do you attend?</string>
    <string-array name="event_types">
        <item>Parties</item>
        <item>Concerts</item>
        <item>Poetry Slams</item>
        <item>Tournaments</item>
        <item>Clubs</item>
        <item>Dummy</item>
        <item>Field</item>
        <item>Field</item>
        <item>Field</item>
        <item>Field</item>
        <item>Field</item>
        <item>Field</item>
        <item>Field</item>
        <item>Field</item>
        <item>Field</item>
        <item>Field</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="interest_fragment">Interest Fragment</string>
    <string name="next">Next</string>
    <string name="sign_up_fragment">Sign Up Fragment</string>
    <string name="login">Log In</string>
    <string name="keep_me_signed_in">Keep me signed in.</string>
    <string name="events">Events</string>
    <string name="title_activity_maps">Map</string>
    <string name="events_map_fragment">Events Map Fragment</string>
    <string name="event_fragment">Events Fragment</string>
    <string name="event_list_fragment">Event List Fragment</string>
    <string name="event_title">Event Title</string>
    <string name="event_location">Location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="event_submission">Event Submission</string>
    <string name="search_fence">Search Fence</string>
    <string name="google_maps_key">AIzaSyC8Boh3w4wZp8FGapxQOZCnOMIDO0svrG0</string>
    <string name="red_400">#EF5350</string>
    <string name="blue_400">#42A5F5</string>
    <string name="pink_400">#EC407A</string>
    <string name="purple_400">#AB47BC</string>
    <string name="indigo_400">#5C6BC0</string>
    <string name="light_blue_400">#29B6F6</string>
    <string name="cyan_400">#26C6DA</string>
    <string name="teal_400">#26A69A</string>
    <string name="green_400">#66BB6A</string>
    <string name="light_green_400">#9CCC65</string>
    <string name="lime_400">#D4E157</string>
    <string name="yellow_400">#FFEE58</string>
    <string name="amber_400">#FFCA28</string>
    <string name="orange_400">#FFA726</string>
    <string name="deep_orange_400">#FF7043</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="price">$25</string>
    <string name="location">511 Gresham Place</string>
    <string name="user_profile_name">Pablo Grant</string>
    <string name="title">ReggaeFest</string>
    <string name="title_activity_settings">Add Event</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="attending">34</string>

</resources>
